--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "pugtail",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A Pug/TailwindCSS JAMStack template for quickly building awesome static websites",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack serve --config webpack.config.dev.js --port 80",
     "watch": "webpack --watch --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
